--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "next lint --fix && biome lint --write --unsafe",
     "format": "biome format --write",
     "webhook": "svix listen http://localhost:3000/api/webhooks/clerk",
+    "seed": "npx tsx src/lib/db/seed/seed.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "npx tsx src/lib/db/migrate.ts",
     "db:studio": "drizzle-kit studio",
