--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -24,6 +24,7 @@
     "@ai-sdk/provider": "^1.0.7",
     "@clerk/nextjs": "^6.12.0",
     "@clerk/themes": "^2.2.19",
+    "@hookform/resolvers": "^4.1.1",
     "@vercel/postgres": "^0.10.0",
     "@workspace/schemas": "workspace:*",
     "@workspace/ui": "workspace:*",
@@ -54,6 +55,7 @@
     "prosemirror-view": "^1.34.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.0",
