--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -25,6 +25,9 @@
     "@clerk/nextjs": "^6.12.0",
     "@clerk/themes": "^2.2.19",
     "@hookform/resolvers": "^4.1.1",
+    "@tanstack/react-query": "^5.66.9",
+    "@tanstack/react-query-devtools": "^5.66.9",
+    "@tanstack/react-query-next-experimental": "^5.66.9",
     "@vercel/postgres": "^0.10.0",
     "@workspace/schemas": "workspace:*",
     "@workspace/ui": "workspace:*",
