feat: working on plant flows

--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -36,7 +36,6 @@
     "@tanstack/react-query-devtools": "^5.66.9",
     "@tanstack/react-query-next-experimental": "^5.66.9",
     "@vercel/postgres": "^0.10.0",
-    "@workspace/schemas": "workspace:*",
     "@workspace/ui": "workspace:*",
     "ai": "4.1.17",
     "bcrypt-ts": "^5.0.2",
@@ -84,6 +83,7 @@
     "@biomejs/biome": "1.9.4",
     "@eslint/eslintrc": "^3",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/next": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
